--- a/back-vagas/src/main/resources/application.properties
+++ b/back-vagas/src/main/resources/application.properties
@@ -1,6 +1,7 @@
-spring.datasource.url=jdbc:mysql://localhost:3306/vagasdb?allowPublicKeyRetrieval=true&useSSL=false&serverTimezone=UTC
+spring.datasource.url=jdbc:mysql://host.docker.internal:3306/vagasdb?useSSL=false&serverTimezone=UTC&allowPublicKeyRetrieval=true
 spring.datasource.username=root
 spring.datasource.password=otavio123
+
 
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
